Replace references to GitHub with Xiala

--- a/generator/templates/index.html
+++ b/generator/templates/index.html
@@ -77,7 +77,7 @@
 			<p>
 				<strong>{{links_heading}}</strong>
 				<ul>
-					<li>{{link_github}}</li>
+					<li>{{link_git}}</li>
 					<li>{{link_graphic_calendar}}</li>
 					<li>{{link_graphic_network}}</li>
 					<li>{{link_translation}}</li>
