--- a/generator/templates/index.html
+++ b/generator/templates/index.html
@@ -12,12 +12,12 @@
 	<meta name="og:description" property="og:description" content="{{desc_long}}">
 
 	<meta name="twitter:card" property="twitter:card" content="summary">
-	<meta name="twitter:site" property="twitter:site" content="@opendatacity">
+	<meta name="twitter:site" property="twitter:site" content="@digiges_ch">
 	<meta name="twitter:creator" property="twitter:creator" content="@opendatacity">
 	<meta name="twitter:title" property="twitter:title" content="{{title}}">
 	<meta name="twitter:description" property="twitter:description" content="{{desc_short}}">
 	<meta name="twitter:image:src" property="twitter:image:src" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
-	<meta name="twitter:domain" property="twitter:domain" content="opendatacity.de">
+	<meta name="twitter:domain" property="twitter:domain" content="digitale-gesellschaft.ch">
 
 	<meta name="description" content="{{desc_long}}">
 	<meta name="author" content="Michael Kreil, OpenDataCity">
