--- a/generator/templates/index.html
+++ b/generator/templates/index.html
@@ -94,7 +94,7 @@
 		<p>
 			{{license_info}}
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_{{lang_code}}.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;{{created_by}} &lt;a target=&quot;_blank&quot; href=&quot;http://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_{{lang_code}}.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;{{created_by}} &lt;a target=&quot;_blank&quot; href=&quot;https://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
 			{{embed_info}}
